--- a/Code/Domain/Domain.vcxproj.filters
+++ b/Code/Domain/Domain.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClInclude Include="include\Domain\TimedDifference.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="include\Domain\Header.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="include\Domain\Controller_D.h-base" />
