--- a/Code/Adapter/CMakeLists.txt
+++ b/Code/Adapter/CMakeLists.txt
@@ -38,16 +38,22 @@ add_library(Adapter_lib
 	src/ActionAdapter_Mock.cpp
 )
 
-target_link_libraries(Adapter_lib ${catkin_LIBRARIES})
+## Add cmake target dependencies of the executable
+add_dependencies(Adapter_lib ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} Application_lib Domain_lib Abstraction_lib)
+
+## Specify libraries to link a library or executable target against
+target_link_libraries(Adapter_lib ${catkin_LIBRARIES} Application_lib Domain_lib Abstraction_lib)
 
 #############
 ## Install ##
 #############
+## Mark libraries for installation
 install(TARGETS Adapter_lib 
 	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION})
 
+## Mark cpp header files for installation
 install(DIRECTORY include/Adapter/
 	DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
