--- a/Code/PosControl/CMakeLists.txt
+++ b/Code/PosControl/CMakeLists.txt
@@ -16,6 +16,10 @@ find_package(
     mavros_msgs
     sensor_msgs
     
+    Abstraction
+    Domain
+    Application
+    Adapter
     coex
 )
 
@@ -58,9 +62,9 @@ add_executable(BridgeNode
 )
 
 ## Add cmake target dependencies of the executable
-add_dependencies(BridgeNode ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+add_dependencies(BridgeNode ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController Adapter_lib Application_lib Domain_lib Abstraction_lib)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(BridgeNode ${catkin_LIBRARIES} coexController)
+target_link_libraries(BridgeNode ${catkin_LIBRARIES} coexController Adapter_lib Application_lib Domain_lib Abstraction_lib)
 
 
