--- a/Code/Application/Application.vcxproj
+++ b/Code/Application/Application.vcxproj
@@ -145,14 +145,17 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="src\AccelToPos.cpp" />
+    <ClCompile Include="src\AngVelToAng.cpp" />
     <ClCompile Include="src\State.cpp" />
     <ClCompile Include="src\StateHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Application\AccelToPos.h" />
+    <ClInclude Include="include\Application\AngVelToAng.h" />
     <ClInclude Include="include\Application\State.h" />
     <ClInclude Include="include\Application\StateHandler.h" />
     <ClInclude Include="include\Application\StateTranslator.h" />
+    <ClInclude Include="include\Application\Wrapper3D.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Abstraction\Abstraction.vcxproj">
