Added Nodes for Topic-Tests
Added TestPose-Node.
Added TestMC-Node.
Added TestRC-Node.
Added those Nodes to PosControl/CMakeList.txt.
Added AngVelToAng.h to Application/Header.h.
Added underlying includes to coex/CMakeList.txt.

--- a/Code/Application/CMakeLists.txt
+++ b/Code/Application/CMakeLists.txt
@@ -33,6 +33,7 @@ include_directories(
 add_library(Application_lib
 	include/Application/Header.h
 	src/AccelToPos.cpp
+	src/AngVelToAng.cpp
 	src/State.cpp
 	src/StateHandler.cpp
 )
