Found a semi-working Topic - heading towards it.
Fixed mistake in Thread and RosThread, now RosThread runs RosThread::run().
Edited coexRC_Transmitter to inherence an AutoPublisher not just wrapping one.
Deleted AutoPublisher from coexState.

--- a/Code/PosControl/CMakeLists.txt
+++ b/Code/PosControl/CMakeLists.txt
@@ -20,6 +20,8 @@ find_package(
     Domain
     Application
     Adapter
+    calling
+    threading
     coex
 )
 
@@ -73,15 +75,36 @@ add_executable(TestRC
 	src/TestRC.cpp
 )
 
+add_executable(TestRC2
+	src/TestRC2.cpp
+)
+
+add_executable(TestThrust
+	src/TestThrust.cpp
+)
+
+
+
 ## Add cmake target dependencies of the executable
 add_dependencies(BridgeNode ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController Adapter_lib Application_lib Domain_lib Abstraction_lib)
-add_dependencies(TestPose ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(TestMC ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(TestRC ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(TestPose ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+add_dependencies(TestMC ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+add_dependencies(TestRC ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+add_dependencies(TestRC2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController calling_lib threading_lib)
+add_dependencies(TestThrust ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(BridgeNode ${catkin_LIBRARIES} coexController Adapter_lib Application_lib Domain_lib Abstraction_lib)
-target_link_libraries(TestPose ${catkin_LIBRARIES})
-target_link_libraries(TestMC ${catkin_LIBRARIES})
-target_link_libraries(TestRC ${catkin_LIBRARIES})
+target_link_libraries(TestPose ${catkin_LIBRARIES} coexController)
+target_link_libraries(TestMC ${catkin_LIBRARIES} coexController)
+target_link_libraries(TestRC ${catkin_LIBRARIES} coexController)
+target_link_libraries(TestRC2 ${catkin_LIBRARIES} coexController calling_lib threading_lib)
+target_link_libraries(TestThrust ${catkin_LIBRARIES} coexController)
+
+
+
+
+
+
+
 
