--- a/Code/PosControl/CMakeLists.txt
+++ b/Code/PosControl/CMakeLists.txt
@@ -83,6 +83,17 @@ add_executable(TestThrust
 	src/TestThrust.cpp
 )
 
+add_executable(TestLocalPos
+	src/TestLocalPos.cpp
+)
+
+add_executable(TestLocalVel
+	src/TestLocalVel.cpp
+)
+
+# add_executable(TestLocalAccel
+	# src/TestLocalAccel.cpp
+# )
 
 
 ## Add cmake target dependencies of the executable
@@ -92,6 +103,11 @@ add_dependencies(TestMC ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TA
 add_dependencies(TestRC ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
 add_dependencies(TestRC2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController calling_lib threading_lib)
 add_dependencies(TestThrust ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+add_dependencies(TestLocalPos ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+add_dependencies(TestLocalVel ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+#add_dependencies(TestLocalAccel ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+
+
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(BridgeNode ${catkin_LIBRARIES} coexController Adapter_lib Application_lib Domain_lib Abstraction_lib)
@@ -100,7 +116,9 @@ target_link_libraries(TestMC ${catkin_LIBRARIES} coexController)
 target_link_libraries(TestRC ${catkin_LIBRARIES} coexController)
 target_link_libraries(TestRC2 ${catkin_LIBRARIES} coexController calling_lib threading_lib)
 target_link_libraries(TestThrust ${catkin_LIBRARIES} coexController)
-
+target_link_libraries(TestLocalPos ${catkin_LIBRARIES} coexController)
+target_link_libraries(TestLocalVel ${catkin_LIBRARIES} coexController)
+#target_link_libraries(TestLocalAccel ${catkin_LIBRARIES} coexController)
 
 
 
