--- a/Code/ROS_Mock/ROS_Mock.vcxproj
+++ b/Code/ROS_Mock/ROS_Mock.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="termios.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="geometry_msgs\Point.h" />
     <ClInclude Include="geometry_msgs\PoseStamped.h" />
     <ClInclude Include="geometry_msgs\Quaternion.h" />
     <ClInclude Include="geometry_msgs\Vector3.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="mavros_msgs\CommandBoolResponse.h" />
     <ClInclude Include="mavros_msgs\ManualControl.h" />
     <ClInclude Include="mavros_msgs\OverrideRCIn.h" />
+    <ClInclude Include="mavros_msgs\PositionTarget.h" />
     <ClInclude Include="mavros_msgs\RCIn.h" />
     <ClInclude Include="mavros_msgs\SetMode.h" />
     <ClInclude Include="mavros_msgs\SetModeRequest.h" />
