--- a/Code/PosControl/PosControl.vcxproj.filters
+++ b/Code/PosControl/PosControl.vcxproj.filters
@@ -10,28 +10,46 @@
     <ClCompile Include="PosControl.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="src\TestMC.cpp">
+    <ClCompile Include="src\TestThrust.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TestRCOverride.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TestRCTransmitter.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="src\TestPose.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="src\TestRC.cpp">
+    <ClCompile Include="src\TestPose_Example.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="src\TestThrust.cpp">
+    <ClCompile Include="src\TestPosLocalPos.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="src\TestRC2.cpp">
+    <ClCompile Include="src\TestPosLocalAccel.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="src\TestLocalAccel.cpp">
+    <ClCompile Include="src\TestPosLocalVel.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="src\TestLocalPos.cpp">
+    <ClCompile Include="src\TestMCControl.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="src\TestLocalVel.cpp">
+    <ClCompile Include="src\TestMCSend.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TestPosLocalPos_Masked.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TestPosLocalPos_MC.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TestRCOverride_OFFBOARD.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TestRC_Heartbeated.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
