Updated CMakeList and edited TestMC_Heartbeated

--- a/Code/PosControl/CMakeLists.txt
+++ b/Code/PosControl/CMakeLists.txt
@@ -70,15 +70,27 @@ add_executable(TestPose
 	src/TestPose.cpp
 )
 
+add_executable(TestRCHeartbeated
+	src/TestRC_Heartbeated.cpp
+)
 add_executable(TestRCOverride
 	src/TestRCOverride.cpp
+)
+add_executable(TestRCOffboarded
+	src/TestRCOverride_OFFBOARD.cpp
 )
 add_executable(TestRCTransmitter
 	src/TestRCTransmitter.cpp
 )
 
-add_executable(TestMC
-	src/TestMC.cpp
+add_executable(TestMCHeartbeated
+	src/TestMC_Heartbeated.cpp
+)
+add_executable(TestMCControl
+	src/TestMCControl.cpp
+)
+add_executable(TestMCSend
+	src/TestMCSend.cpp
 )
 
 add_executable(TestThrust
@@ -88,9 +100,14 @@ add_executable(TestThrust
 add_executable(TestPosLocalPos
 	src/TestPosLocalPos.cpp
 )
+add_executable(TestPosLocalPosMasked
+	src/TestPosLocalPos_Masked.cpp
+)
+
 add_executable(TestPosLocalVel
 	src/TestPosLocalVel.cpp
 )
+
 add_executable(TestPosLocalAccel
 	src/TestPosLocalAccel.cpp
 )
@@ -102,14 +119,19 @@ add_dependencies(BridgeNode ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTE
 add_dependencies(TestPoseExample ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
 add_dependencies(TestPose ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
 
+add_dependencies(TestRCHeartbeated ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController calling_lib threading_lib)
 add_dependencies(TestRCOverride ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+add_dependencies(TestRCOffboarded ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
 add_dependencies(TestRCTransmitter ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController calling_lib threading_lib)
 
-add_dependencies(TestMC ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController calling_lib threading_lib)
+add_dependencies(TestMCHeartbeated ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController calling_lib threading_lib)
+add_dependencies(TestMCControl ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController calling_lib threading_lib)
+add_dependencies(TestMCSend ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController calling_lib threading_lib)
 
 add_dependencies(TestThrust ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
 
 add_dependencies(TestPosLocalPos ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
+add_dependencies(TestPosLocalPosMasked ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
 add_dependencies(TestPosLocalVel ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
 add_dependencies(TestPosLocalAccel ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coexController)
 
@@ -123,14 +145,19 @@ target_link_libraries(BridgeNode ${catkin_LIBRARIES} coexController Adapter_lib 
 target_link_libraries(TestPose ${catkin_LIBRARIES} coexController)
 target_link_libraries(TestPoseExample ${catkin_LIBRARIES} coexController)
 
+target_link_libraries(TestRCHeartbeated ${catkin_LIBRARIES} coexController calling_lib threading_lib)
 target_link_libraries(TestRCOverride ${catkin_LIBRARIES} coexController)
+target_link_libraries(TestRCOffboarded ${catkin_LIBRARIES} coexController)
 target_link_libraries(TestRCTransmitter ${catkin_LIBRARIES} coexController calling_lib threading_lib)
 
-target_link_libraries(TestMC ${catkin_LIBRARIES} coexController calling_lib threading_lib)
+target_link_libraries(TestMCHeartbeated ${catkin_LIBRARIES} coexController calling_lib threading_lib)
+target_link_libraries(TestMCControl ${catkin_LIBRARIES} coexController calling_lib threading_lib)
+target_link_libraries(TestMCSend ${catkin_LIBRARIES} coexController calling_lib threading_lib)
 
 target_link_libraries(TestThrust ${catkin_LIBRARIES} coexController)
 
 target_link_libraries(TestPosLocalPos ${catkin_LIBRARIES} coexController)
+target_link_libraries(TestPosLocalPosMasked ${catkin_LIBRARIES} coexController)
 target_link_libraries(TestPosLocalVel ${catkin_LIBRARIES} coexController)
 target_link_libraries(TestPosLocalAccel ${catkin_LIBRARIES} coexController)
 
