--- a/Code/PosControl/PosControl.vcxproj
+++ b/Code/PosControl/PosControl.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="src\StateBuilder.cpp" />
     <ClCompile Include="src\TestMCSend.cpp" />
     <ClCompile Include="src\TestPosLocalAccel.cpp" />
+    <ClCompile Include="src\TestPosLocalVel_Masked.cpp" />
     <ClCompile Include="src\TestRC_Heartbeated.cpp" />
     <ClCompile Include="src\TestMC_Heartbeated.cpp" />
     <ClCompile Include="src\TestPosLocalPos.cpp" />
