Refactored Integral-Classes
Added new Class _Integral1_ as Parent of _AngVelToAng_.
Added new Class _Integral2_ as Parent of _AccelToPos_.
Deleted _StateTranslator_.

--- a/Code/Domain/Domain.vcxproj.filters
+++ b/Code/Domain/Domain.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="src\TimedDifference.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\Integral1.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Integral2.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Domain\Controllable.h">
@@ -102,6 +108,12 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="include\Domain\Header.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Domain\Integral1.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Domain\Integral2.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
