--- a/Code/Domain/Domain.vcxproj
+++ b/Code/Domain/Domain.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="src\Controller_PID.cpp" />
     <ClCompile Include="src\Controller_PT.cpp" />
     <ClCompile Include="src\Input.cpp" />
+    <ClCompile Include="src\Integral1.cpp" />
+    <ClCompile Include="src\Integral2.cpp" />
     <ClCompile Include="src\TimedDifference.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +174,8 @@
     <ClInclude Include="include\Domain\Header.h" />
     <ClInclude Include="include\Domain\Input.h" />
     <ClInclude Include="include\Domain\Inputable.h" />
+    <ClInclude Include="include\Domain\Integral1.h" />
+    <ClInclude Include="include\Domain\Integral2.h" />
     <ClInclude Include="include\Domain\Output.h" />
     <ClInclude Include="include\Domain\Outputable.h" />
     <ClInclude Include="include\Domain\TimedDifference.h" />
