--- a/Code/ROS_Mock/ROS_Mock.vcxproj.filters
+++ b/Code/ROS_Mock/ROS_Mock.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="termios.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="ros.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ros\ros.h">
@@ -102,6 +105,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="mavros_msgs\Thrust.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="ros\rosTiming.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
