--- a/Code/keyboard/keyboard.vcxproj
+++ b/Code/keyboard/keyboard.vcxproj
@@ -95,7 +95,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>../ROS_Mock/Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>termios.obj;ros_Talker.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>termios.obj;ros_Talker.obj;ros.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
