--- a/Code/Abstraction/Abstraction.vcxproj
+++ b/Code/Abstraction/Abstraction.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="src\Vector3D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Abstraction\FixedPoint.h" />
     <ClInclude Include="include\Abstraction\Optional.h" />
     <ClInclude Include="include\Abstraction\Ringbuffer.h" />
     <ClInclude Include="include\Abstraction\TimedValue.h" />
