--- a/Code/Abstraction/Abstraction.vcxproj.filters
+++ b/Code/Abstraction/Abstraction.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="include\Abstraction\Vector3D.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="include\Abstraction\FixedPoint.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
