--- a/Code/Domain/Domain.vcxproj.filters
+++ b/Code/Domain/Domain.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\Integral2.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\Pose.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Domain\Controllable.h">
@@ -114,6 +117,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="include\Domain\Integral2.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Domain\Pose.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
