--- a/Code/Application/Application.vcxproj.filters
+++ b/Code/Application/Application.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="src\StateHandler.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\PoseBuilder.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Application\AccelToPos.h">
@@ -39,6 +42,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="include\Application\Wrapper3D.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Application\PoseBuilder.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
