--- a/Code/Abstraction/Abstraction.vcxproj
+++ b/Code/Abstraction/Abstraction.vcxproj
@@ -118,6 +118,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>./include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -148,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Abstraction\FixedPoint.h" />
+    <ClInclude Include="include\Abstraction\Header.h" />
     <ClInclude Include="include\Abstraction\Optional.h" />
     <ClInclude Include="include\Abstraction\Ringbuffer.h" />
     <ClInclude Include="include\Abstraction\TimedValue.h" />
